prefect/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prefect
  labels:
    name: prefect
